# FoldCraftLauncher

./: .gitattributes  .gitignore  .gitmodules  Fix.yml  Fold craft launcher  For Android version 7.0  JDK11 8 17  file  README.md  README_EN.md  README_RU.md  SECURITY.md  VerifiedPluginLoad方案.md  build.gradle  build.gradle.kts  debug-key.jks  debug.jks  fcl-release.jks  gradle.properties  how-to-use.md  key-store.jks  local.properties  marvelspiderman Android  private_key.pepk  settings.gradle  settings.gradle.kts  version_map.json  version_map.json习近平  习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平习近平  液态玻璃教程.md
FCLauncher/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  bigcoreaffinity.c  egl_bridge.c  egl_bridge.h  elf_defs.h  input_bridge_v3.c  jre_launcher.c  log.h  lwjgl_dlopen_hook.c  pojavexec.h  utils.c  utils.h  vulkan_loader.c
FCLauncher/src/main/jni/GL/: gl.h  osmesa.h
FCLauncher/src/main/jni/alsa_stub/: alsa_stub.c
FCLauncher/src/main/jni/awt/: awt_bridge.c
FCLauncher/src/main/jni/byopen/: byopen.h  byopen_android.c  prefix.h
FCLauncher/src/main/jni/ctxbridges/: bridge_tbl.h  egl_loader.c  egl_loader.h  gl_bridge.c  loader_dlopen.c  loader_dlopen.h  osm_bridge.c  osmesa_loader.c  osmesa_loader.h
FCLauncher/src/main/jni/driver_helper/: android_namespace_func.h  arm64_func_locator.c  driver_helper.c  driver_helper.h  fake_dlfcn.c  fake_dlfcn.h  func_locator.c  nsbypass.c  nsbypass.h
FCLauncher/src/main/jni/environ/: environ.c  environ.h
FCLauncher/src/main/jni/fcl/: fcl_bridge.c  fcl_event.c  fcl_loader.c  jre_launcher.c  utils.c
FCLauncher/src/main/jni/fcl/include/: fcl_bridge.h  fcl_event.h  fcl_internal.h  fcl_keycodes.h  utils.h
FCLauncher/src/main/jni/glfw/: context.c  driver_helper.c  egl_context.c  fcl_init.c  fcl_monitor.c  fcl_window.c  init.c  input.c  lwjgl_dlopen_hook.c  monitor.c  null_joystick.c  osmesa_context.c  platform.c  posix_thread.c  posix_time.c  vulkan.c  window.c
FCLauncher/src/main/jni/glfw/include/: egl_context.h  fcl_platform.h  glfw3.h  glfw_config.h  internal.h  null_joystick.h  osmesa_context.h  platform.h  posix_thread.h  posix_time.h
FCLauncher/src/main/jni/jsound/: jsound.c
FCLauncher/src/main/jni/jvm_hooks/: emui_iterator_fix_hook.c  java_exec_hooks.c  jvm_hooks.h  lwjgl_dlopen_hook.c
FCLauncher/src/main/jni/linkerhook/: linkerhook.cpp  linkerhook.h  linkerns.c
FCLauncher/src/main/jni/lwjgl/: FCLConfig.h  FCLLWJGL.h  common_tools.c  common_tools.h  context.c  fcl_hook.c  fcl_hook.h  init.c  org_lwjgl_opengl_ARBColorBufferFloat.c  org_lwjgl_opengl_ARBComputeVariableGroupSize.c  org_lwjgl_opengl_ARBDebugOutput.c  org_lwjgl_opengl_ARBDrawBuffers.c  org_lwjgl_opengl_ARBDrawInstanced.c  org_lwjgl_opengl_ARBES32Compatibility.c  org_lwjgl_opengl_ARBGLSPIRV.c  org_lwjgl_opengl_ARBGPUShaderInt64.c  org_lwjgl_opengl_ARBMatrixPalette.c  org_lwjgl_opengl_ARBMultisample.c  org_lwjgl_opengl_ARBOcclusionQuery.c  org_lwjgl_opengl_ARBParallelShaderCompile.c  org_lwjgl_opengl_ARBShaderObjects.c  org_lwjgl_opengl_ARBSparseBuffer.c  org_lwjgl_opengl_ARBTextureStorage.c  org_lwjgl_opengl_ARBVertexAttrib64Bit.c  org_lwjgl_opengl_ARBVertexAttribBinding.c  org_lwjgl_opengl_ARBVertexProgram.c  org_lwjgl_opengl_ARBVertexShader.c  org_lwjgl_opengl_ARBWindowPos.c  org_lwjgl_opengl_EXTBindableUniform.c  org_lwjgl_opengl_EXTBlendEquationSeparate.c  org_lwjgl_opengl_EXTBlendFuncSeparate.c  org_lwjgl_opengl_EXTBlendMinmax.c  org_lwjgl_opengl_EXTCompiledVertexArray.c  org_lwjgl_opengl_EXTEGLImageStorage.c  org_lwjgl_opengl_EXTFramebufferBlit.c  org_lwjgl_opengl_EXTFramebufferMultisample.c  org_lwjgl_opengl_EXTGPUShader4.c  org_lwjgl_opengl_EXTGeometryShader4.c  org_lwjgl_opengl_EXTProvokingVertex.c  org_lwjgl_opengl_EXTSemaphore.c  (+37 more)
FCLauncher/src/main/jni/lwjgl/nanovg/: fontstash.h  nanovg.c  org_lwjgl_nanovg_Blendish.c  org_lwjgl_nanovg_LibNanoVG.c  org_lwjgl_nanovg_NanoSVG.c  org_lwjgl_nanovg_NanoVG.c  org_lwjgl_nanovg_NanoVGGL2.c  org_lwjgl_nanovg_NanoVGGL3.c  org_lwjgl_nanovg_NanoVGGLES2.c  org_lwjgl_nanovg_NanoVGGLES3.c  org_lwjgl_nanovg_OUI.c
FCLauncher/src/main/jni/lwjgl/opengl/: opengl.h  org_lwjgl_opengl_AMDDebugOutput.c  (+182 more)
FCLauncher/src/main/jni/lwjgl3/: common_tools.c  fcl_hook.c  opengl.h  org_lwjgl_opengl_ARBClearBufferObject.c  org_lwjgl_opengl_ARBDrawBuffersBlend.c  org_lwjgl_opengl_ARBFramebufferNoAttachments.c  org_lwjgl_opengl_ARBGPUShaderFP64.c  org_lwjgl_opengl_ARBGeometryShader4.c  org_lwjgl_opengl_ARBImaging.c  org_lwjgl_opengl_ARBIndirectParameters.c  org_lwjgl_opengl_ARBInstancedArrays.c  org_lwjgl_opengl_ARBMultitexture.c  org_lwjgl_opengl_ARBPointParameters.c  org_lwjgl_opengl_ARBRobustness.c  org_lwjgl_opengl_ARBSampleLocations.c  org_lwjgl_opengl_ARBSampleShading.c  org_lwjgl_opengl_ARBShadingLanguageInclude.c  org_lwjgl_opengl_ARBSparseTexture.c  org_lwjgl_opengl_ARBTextureBufferObject.c  org_lwjgl_opengl_ARBTextureBufferRange.c  org_lwjgl_opengl_ARBTextureCompression.c  org_lwjgl_opengl_ARBTextureStorageMultisample.c  org_lwjgl_opengl_ARBTransposeMatrix.c  org_lwjgl_opengl_ARBVertexBlend.c  org_lwjgl_opengl_ARBVertexBufferObject.c  org_lwjgl_opengl_EXTBlendColor.c  org_lwjgl_opengl_EXTDebugLabel.c  org_lwjgl_opengl_EXTDebugMarker.c  org_lwjgl_opengl_EXTDepthBoundsTest.c  org_lwjgl_opengl_EXTDirectStateAccess.c  org_lwjgl_opengl_EXTDrawBuffers2.c  org_lwjgl_opengl_EXTDrawInstanced.c  org_lwjgl_opengl_EXTExternalBuffer.c  org_lwjgl_opengl_EXTFramebufferObject.c  org_lwjgl_opengl_EXTGPUProgramParameters.c  org_lwjgl_opengl_EXTMemoryObject.c  org_lwjgl_opengl_EXTMemoryObjectFD.c  org_lwjgl_opengl_EXTMemoryObjectWin32.c  org_lwjgl_opengl_EXTPointParameters.c  org_lwjgl_opengl_EXTPolygonOffsetClamp.c  (+42 more)
FCLauncher/src/main/jni/pojav/: bigcoreaffinity.c  egl_bridge.c  input_bridge_v3.c  jre_launcher.c  lwjgl_dlopen_hook.c  pojav.h  pojav_cap.h  utils.c
FCLauncher/src/main/jni/tinywrapper/: gl.h  main.c  string_utils.c
FCLauncher/src/main/jni/virgl/: virgl.c  virgl.h
FCLauncher/src/main/jni/xhook/: xh_core.c  xh_elf.c  xh_jni.c  xh_util.c  xh_version.c  xhook.c
(+3514 files in other folders)
